--- a/TemplateCards/template_03/style.css
+++ b/TemplateCards/template_03/style.css
@@ -1,8 +1,13 @@
+@font-face {
+  font-family: "Priestacy";
+  src: url("./fonts/Priestacy.otf") format("truetype");
+}
+
 body {
   margin: 0;
   padding: 0;
   background: #f7e9e2;
-  font-family: "Playfair Display", serif;
+  font-family: "Montserrat", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,16 +24,19 @@ body {
 .flower-border {
   position: absolute;
   width: 100%;
+  height: 90%;
+  object-fit: fill;
   top: 0;
   left: 0;
   z-index: 20;
+  opacity: 0.9;
   pointer-events: none;
 }
 
 /* Main card */
 .invitation-card {
   width: 420px;
-  background: linear-gradient(#fff9e6, #fdf5d9);
+  background: url("./images/background.png") no-repeat center center;
   padding: 50px 30px;
   position: relative;
   border-radius: 10px;
@@ -65,7 +73,7 @@ body {
 }
 
 .names {
-  font-family: "Great Vibes", cursive;
+  font-family: "Priestacy", cursive;
   font-size: 55px;
   color: #8b4e46;
   line-height: 1.2;
@@ -87,7 +95,7 @@ body {
   display: flex;
   justify-content: center;
   margin: 25px 0;
-  border: 1px solid #c9b1a6;
+  /* border: 1px solid #c9b1a6; */
   padding: 10px 0;
 }
 
@@ -99,24 +107,21 @@ body {
 .label {
   font-weight: 600;
   color: #8b4e46;
-  font-size: 18px;
+  font-size: 30px;
 }
 
 .center {
-  border-left: 1px solid #c9b1a6;
-  border-right: 1px solid #c9b1a6;
+  border-left: 3px solid #8b4e46;
+  border-right: 3px solid #8b4e46;
 }
 
-.day {
-  font-size: 18px;
-  color: #7a5a4a;
-}
-
+.day,
 .date {
   font-size: 30px;
   font-weight: 600;
   color: #8b4e46;
   margin-top: 5px;
+  margin-block-end: 0;
 }
 
 .details {
@@ -127,7 +132,7 @@ body {
 }
 
 .footer-script {
-  font-family: "Great Vibes", cursive;
+  font-family: "Priestacy", cursive;
   font-size: 24px;
   margin-top: 20px;
   color: #8b4e46;
