--- a/TemplateCards/template_05/style.css
+++ b/TemplateCards/template_05/style.css
@@ -1,16 +1,17 @@
-body {
+/* body {
   margin: 0;
   background: #e7dfd3;
   display: flex;
   justify-content: center;
   padding: 40px;
   font-family: "Montserrat", sans-serif;
-}
+} */
 
 /* Wrapper for border + card */
 .card-wrapper {
   position: relative;
   width: 540px;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Floral PNG border */
