--- a/TemplateCards/template_01/style.css
+++ b/TemplateCards/template_01/style.css
@@ -18,7 +18,7 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   margin: 0;
   padding: 0;
   background: #eee8df;
@@ -27,7 +27,7 @@ body {
   align-items: center;
   min-height: 100vh;
   font-family: "Playfair Display", serif;
-}
+} */
 
 /* ========================================= */
 /* CARD WRAPPER */
@@ -40,6 +40,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Playfair Display", serif;
 }
 
 /* ========================================= */
